@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.20 2003/10/04 10:03:28 jaco Exp $
+# $Id: Makefile,v 1.21 2003/10/04 16:10:43 jaco Exp $
 
 include Rules.mk
 
@@ -10,14 +10,20 @@ version:
 mklivecd:
 	$(MKDIR) -p $(DISTDIR)
 	$(CAT) $(SRCDIR)/hwdetect.in | \
-		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g;s/@DEF_KEYBOARD@/$(DEF_KEYBOARD)/g' \
-		>$(DISTDIR)/hwdetect
+		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g' | \
+		$(SED) -e 's/@DEF_KEYBOARD@/$(DEF_KEYBOARD)/g' \
+			>$(DISTDIR)/hwdetect
 	$(CAT) $(SRCDIR)/linuxrc.in | \
-		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g;s/@KERNELVER@/$(KERNELVER)/g' \
-		>$(DISTDIR)/linuxrc
+		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g' | \
+		$(SED) -e 's/@KERNELVER@/$(KERNELVER)/g' \
+			>$(DISTDIR)/linuxrc
 	$(CAT) $(SRCDIR)/$(PKGNAME).in | \
-		$(SED) -e 's/@PKGNAME@/$(PKGNAME)/g;s/@MKLIVECDVER@/$(ARCHIVEVER)/g;s/@DEF_KEYBOARD@/$(DEF_KEYBOARD)/g' \
-		>$(DISTDIR)/$(PKGNAME)
+		$(SED) -e 's/@PKGNAME@/$(PKGNAME)/g' | \
+		$(SED) -e 's/@MKLIVECDVER@/$(ARCHIVEVER)/g' | \
+		$(SED) -e 's/@DEF_KEYBOARD@/$(DEF_KEYBOARD)/g' | \
+		$(SED) -e 's/@DEF_RESOLUTION@/$(DEF_RESOLUTION)/g' | \
+		$(SED) -e 's/@DEF_VGAMODE@/$(DEF_VGAMODE)/g' \
+			>$(DISTDIR)/$(PKGNAME)
 
 install:
 	$(MKDIR) -p $(DESTDIR)$(SHAREDIR)
@@ -29,8 +35,11 @@ install:
 spec:
 	$(MKDIR) -p $(DISTDIR)
 	$(CAT) $(PKGNAME).spec.in | \
-		$(SED) -e 's/@MKLIVECDVER@/$(MKLIVECDVER)/g;s/@MKLIVECDREL@/$(MKLIVECDREL)/g;s/@SPECDATE@/$(SPECDATE)/g;s/@ARCHIVEVER@/$(ARCHIVEVER)/g' \
-		>$(DISTDIR)/$(PKGNAME).spec
+		$(SED) -e 's/@MKLIVECDVER@/$(MKLIVECDVER)/g' | \
+		$(SED) -e 's/@MKLIVECDREL@/$(MKLIVECDREL)/g' | \
+		$(SED) -e 's/@SPECDATE@/$(SPECDATE)/g' | \
+		$(SED) -e 's/@ARCHIVEVER@/$(ARCHIVEVER)/g' \
+			>$(DISTDIR)/$(PKGNAME).spec
 
 clean:
 	$(RM) -rf $(MKLIVECDDIST)
@@ -38,13 +47,12 @@ clean:
 
 dist: spec
 	$(MKDIR) -p $(MKLIVECDDIST)/$(SRCDIR)
-	$(CP) AUTHORS CHANGELOG COPYING FAQ README TODO Makefile Rules.mk $(DISTDIR)/$(PKGNAME).spec $(MKLIVECDDIST)
-	$(CP) $(SRCDIR)/linuxrc.in $(MKLIVECDDIST)/$(SRCDIR)
-	$(CP) $(SRCDIR)/$(PKGNAME).in $(MKLIVECDDIST)/$(SRCDIR)
-	$(CP) $(SRCDIR)/hwdetect.in $(MKLIVECDDIST)/$(SRCDIR)
+	$(CP) $(DOCDIST) $(MKLIVECDDIST)
+	$(CP) $(SRCDIST) $(MKLIVECDDIST)/$(SRCDIR)
 	$(TAR) -c $(MKLIVECDDIST) | \
 		$(BZIP2) >$(DISTDIR)/$(MKLIVECDDIST).tar.bz2
-	$(MD5SUM) $(DISTDIR)/$(MKLIVECDDIST).tar.bz2 >$(DISTDIR)/$(MKLIVECDDIST).tar.bz2.md5
+	$(MD5SUM) $(DISTDIR)/$(MKLIVECDDIST).tar.bz2 \
+		>$(DISTDIR)/$(MKLIVECDDIST).tar.bz2.md5
 	$(RM) -rf $(MKLIVECDDIST)
 
 rpm: dist
